# googleDrivePhotoSync

./: .gitignore  MANUAL.md  README.md  SETUP.md  pyproject.toml  validate.py
packaging/: build_app.sh
tests/: test_auth.py  test_config.py  test_gphotos.py  test_images.py  test_membership.py  test_pipeline.py  test_place.py  test_progress.py  test_run_rotation.py  test_selection.py  test_source.py  test_state.py
tv_photos/: __init__.py  auth.py  cli.py  config.py  gphotos.py  images.py  membership.py  models.py  pipeline.py  place.py  progress.py  selection.py  source.py  state.py
