[project]
name = "tv-photos"
version = "0.1.0"
description = "Rotate random Apple Photos onto a Google TV Ambient-mode Google Photos album"
requires-python = ">=3.12"
dependencies = [
    "osxphotos>=0.69",
    "Pillow>=10",
    "pillow-heif>=0.16",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
tv-photos = "tv_photos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tv_photos"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
